--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
   <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Hello Kotlin!"
+    android:text="Scuzero!"
     android:textSize="24sp" />
 
 </RelativeLayout>
